<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/ll_addNote"
    android:weightSum="1">

    <TextView
        android:id="@+id/txt_Tile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#00ffcc"
        android:textSize="25dp"
        android:text="@string/tieude" />

    <EditText
        android:id="@+id/edt_Tile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.26"
        android:ems="10"
        android:layout_gravity="top"
        android:gravity="top"
        android:hint="@string/tieudenho"
        android:inputType="textPersonName"
        android:textColor="#79adfa" />

    <TextView
        android:id="@+id/txt_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ghichunho"
        android:textColor="#00ffcc"
        android:textSize="25dp" />

    <EditText
        android:id="@+id/edt_Note"
        android:layout_width="match_parent"
        android:layout_height="351dp"
        android:ems="10"
        android:hint="@string/ghichu"
        android:layout_gravity="top"
        android:gravity="top"
        android:layout_weight="1.50" />

</LinearLayout>